<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/constraintLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/gradient_background">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ui"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/constraintLayout">

        <TextView
            android:id="@+id/mapText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pastel_cream"
            android:gravity="center"
            android:text="@string/map"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_weight="7">

            <com.example.mdp_android.MapGrid
                android:id="@+id/mapGrid"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/pastel_red_start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1.2:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_weight="4"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@drawable/yellow_box"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/position"
                            android:textColor="@color/black"
                            android:textSize="11sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <RelativeLayout
                                android:id="@+id/xLayout"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/x"
                                    android:textColor="@color/black"
                                    android:textSize="12sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/robotXCoordinate"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:textColor="@color/black"
                                    android:textSize="14sp"
                                    android:textStyle="bold" />

                            </RelativeLayout>

                            <RelativeLayout
                                android:id="@+id/yLayout"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/y"
                                    android:textColor="@color/black"
                                    android:textSize="12sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/robotYCoordinate"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:textColor="@color/black"
                                    android:textSize="14sp"
                                    android:textStyle="bold" />

                            </RelativeLayout>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="5dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/yellow_box"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/direction"
                            android:textColor="@color/black"
                            android:textSize="11sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/robotDirection"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="350dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/orange_box">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/robotStatus"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/robotStatus"
                        android:layout_width="235dp"
                        android:layout_height="match_parent"
                        android:gravity="center" />

                </RelativeLayout>

                <FrameLayout
                    android:id="@+id/bluetooth_stream_box"
                    android:layout_width="350dp"
                    android:layout_height="175dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/pastel_green_box"
                    android:orientation="vertical">

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintButtons"
                    android:layout_width="match_parent"
                    android:layout_height="217dp">

                    <RelativeLayout
                        android:id="@+id/movement_buttons"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="4:3"
                        app:layout_constraintEnd_toEndOf="@id/constraintButtons"
                        app:layout_constraintEnd_toStartOf="@id/constraintButtons">

                        <ImageButton
                            android:id="@+id/upButton"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:background="@null"
                            android:src="@drawable/ic_up_arrow" />

                        <ImageButton
                            android:id="@+id/leftButton"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:background="@null"
                            android:src="@drawable/ic_left_arrow" />

                        <ImageButton
                            android:id="@+id/centerButton"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_centerInParent="true"
                            android:background="@null"
                            android:src="@drawable/ic_circle" />

                        <ImageButton
                            android:id="@+id/rightButton"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:background="@null"
                            android:src="@drawable/ic_right_arrow" />

                    </RelativeLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <Button
                        android:id="@+id/imageRecognitionStartButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="2dp"
                        android:layout_weight="1"
                        android:src="@drawable/purple_button"
                        android:text="@string/task1"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <Button
                        android:id="@+id/fastestRobotStartButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="2dp"
                        android:layout_weight="1"
                        android:src="@drawable/purple_button"
                        android:text="@string/task2"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>